# fontforge-fontchecker

./: README.md  setup.cfg
.github/workflows/: python-package.yml
fontforge_fontchecker/: __main__.py  config.py  run_check.py
test/: test_config.py  test_run_check.py
