[metadata]
name = fontforge_fontchecker
version = 0.1.0
author = MihailJP
author_email = mihailjp@gmail.com
description = FontForge_plugin of font checker frontend
license = MIT
license_files =
    LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MihailJP/fontforge-fontchecker
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Text Processing :: Fonts

[options]
packages = fontforge_fontchecker
python_requires = >=3.8
install_requires =
    tomlkit

[options.entry_points]
fontforge_plugin =
    Font checker = fontforge_fontchecker.__main__
